# edf-sw

./: .rustfmt.toml  Cargo.toml  Justfile  README.md  build.rs  copy_vtable.S
.cargo/: config.toml
edf-atsamd/: Cargo.toml  build.rs  memory.x
edf-atsamd/scripts/: debug.gdb
edf-atsamd/src/: main.rs
edf-scheduler/: Cargo.toml
edf-scheduler/src/: critical_section.rs  dispatchers.rs  scheduler.rs  task.rs
scripts/: launch.gdb
src/: critical_section.rs  dispatchers.rs  lib.rs  main.rs  scheduler.rs  task.rs  vector_table.rs
