[package]
name = "edf-sw"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
fugit = "0.3.7"
heapless = { version = "0.9.1", features = ["portable-atomic"] }

defmt = { version = "1.0.1", optional = true }

[build-dependencies]
cc = "1.2.44"

[features]
defmt = ["dep:defmt", "fugit/defmt", "heapless/defmt"]