[package]
name = "edf-sw-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
atsamd-hal = { version = "0.23.0", default-features = false }
cortex-m = "0.7.7"
fugit = "0.3.7"
heapless = { version = "0.9.1", features = ["portable-atomic"] }

defmt = { version = "1.0.1", optional = true }


[features]
defmt = ["dep:defmt", "fugit/defmt", "heapless/defmt"]